create a recipe box project and add the the recipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
 <h1>
   {{title}}
 </h1>
+<div class="recipe">
+  <ol>
+    <li *ngFor="let currentRecipe of recipes"><h3>{{currentRecipe.title}}</h3>
+      <ul>
+        <li>{{currentRecipe.ingredients}}</li>
+        <li>{{currentRecipe.directions}}</li>
+      </ul>
+    </li>
+
+  </ol>
+</div>
