--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,6 +8,15 @@ h1:first-of-type {
   background-color: lightyellow;
   border-radius: 15px;
 }
+.intro {
+  text-align: center;
+  border: 2px solid lightblue;
+  padding: 10px 15px;
+  margin: 15px auto;
+  width: 500px;
+  background-color: snow;
+  border-radius: 15px;
+}
 
 .recipe {
   border: 2px solid lightblue;
@@ -18,7 +27,18 @@ h1:first-of-type {
   border-radius: 15px;
 }
 
+.edit {
+  text-align: center;
+  border: 2px solid lightblue;
+  padding: 10px 15px;
+  margin: 15px auto;
+  width: 500px;
+  background-color: snow;
+  border-radius: 15px;
+}
+
 ol li {
-  padding-bottom: 10px;
-  margin-bottom: 10px;
+  padding: 5px;
+  margin: 0 10px 20px 0;
+  list-style: none;
 }
