--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,5 @@
 <div class="recipe">
   <app-recipe-list [childRecipeList]="masterRecipeList" (clickSender)="editRecipe($event)"></app-recipe-list>
 </div>
-<app-edit-recipe [childSelectedRecipe]="selectedRecipe"></app-edit-recipe>
+<app-edit-recipe [childSelectedRecipe]="selectedRecipe" (clickedDone)="finishedEditing()"></app-edit-recipe>
+<app-new-recipe (sendRecipe)="addRecipe($event)"></app-new-recipe>
